--- a/style2.css
+++ b/style2.css
@@ -8,12 +8,13 @@ header{
   flex-direction: row;
   text-align: center;
   padding-top: 1vw;
+  padding-left: 15vw;
   padding-bottom: 0.01vw;
-  background-color: green;
+  background-color: #00FFBF;
 
 }
 
-h1 {
+.cabecera {
   margin: 0;
   padding-top: 15px;
   margin-left: 10vw;
@@ -21,29 +22,21 @@ h1 {
   color: whitesmoke;
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
-  transition: 0.5s font-size linear;
-    background-color: green;
+    transition: 0.5s font-size linear;
+    background-color: #00FFBF;
 
 }
 
-h1:hover {
+.cabecera:hover {
   font-size: 31px;
   font-family: Arial, Helvetica, sans-serif;
   transition: 0.5s font-size linear;
 }
 
-section{
-  display: flex;
-  margin-left: 10vw;
-  font-family: Arial, Helvetica, sans-serif;
-  text-align: bottom;
-
-}
-
 nav {
   padding-top: 50px;
   justify-content: space-between;
-  background-color: green;
+  background-color: #00FFBF;
 }
 
 nav > ul {
@@ -87,6 +80,107 @@ nav > ul > li > a:hover {
   transition: color 0.1s linear;
 }
 
-
+section{
+  padding-top: 15px;
+  padding-left: 10vw;
+  display: flex;
+  margin-left: 10vw;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: bottom;
 
 }
+.sectionContenedora{
+  padding-top: 15px;
+  display: flex;
+  padding-left: 0vw;
+  flex-direction: column;
+  margin-left: 0vw;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: bottom;
+
+}
+.sectionContenedora2{
+  padding-top: 15px;
+  display: flex;
+  padding-left: 0vw;
+  margin-left: 0vw;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: bottom;
+
+}
+
+h1 {
+  margin: 0;
+  padding-top: 15px;
+  text-align: center;
+  color: #00FFBF;
+  font-size: 30px;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 0.5s font-size linear;
+    background-color: white;
+}
+
+h2 {
+  margin: 0;
+  padding-top: 15px;
+  text-align: center;
+  color: #00FFBF;
+  font-size: 22px;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 0.5s font-size linear;
+    background-color: white;
+}
+h3 {
+  margin: 0;
+  padding-top: 5px;
+  padding-left: 2vw;
+  text-align: center;
+  color: #00FFBF;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 0.5s font-size linear;
+    background-color: white;
+}
+
+.h3first {
+  margin: 0;
+  padding-top: 5px;
+  padding-left: 0vw;
+  text-align: center;
+  color: #00FFBF;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 0.5s font-size linear;
+    background-color: white;
+}
+
+
+div{
+  display: flex;
+  flex-direction: column;   
+  padding-left: 2vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 610px;
+  height: 300px;
+}
+
+.h2side{
+  padding-top: 18px;
+  display: flex;
+  flex-direction:row-reverse;   
+  padding-left: 2vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 23vw;  
+  height: 30px;
+}
+
+
+.divtopflops{
+  display: flex;
+  flex-direction: column;   
+  padding-left: 2vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 310px;
+  height: 300px;
+}
+
