--- a/style1.css
+++ b/style1.css
@@ -109,10 +109,38 @@ section{
 
 }
 
+.recuadro{
+  padding-left: 10vw;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;   
+  margin-left: 20vw;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+  width: 45vw;
+  height: 110px;
+  background-color: rgba(17, 58, 243, 0.596);
+}
+
+.recuadroBis{
+  padding-left: 10vw;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;   
+  margin-left: 20vw;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+  width: 45vw;
+  height: 110px;
+  border-style: solid;
+  background-color: rgb(243, 237, 237);
+}
+
 h1 {
   margin: 0;
   padding-top: 15px;
-  text-align: center;
+  width: 30vw;  
+  text-align: left;
   color: rgb(39, 67, 117);
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
@@ -164,7 +192,69 @@ div{
   height: 300px;
 }
 
-.h2side{
+.divShares{
+  display: flex;
+  flex-direction: column;   
+  margin-left: -2vw;
+  padding-left: 0vw;
+  padding-right: 2vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 610px;
+  height: 300px;
+}
+
+
+.recuadrocabecera{
+  display: flex;
+  flex-direction: row;   
+  padding-left: 0vw;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: -8vw;
+  min-width: 60px;
+  height: 30px;  
+}
+.recuadrocabecera2{
+  display: flex;
+  flex-direction: row;   
+  padding-left: 0vw;
+  padding-top: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: -8vw;
+  min-width: 60px;
+  height: 30px;
+  
+}
+
+.separador{
+  margin-left: 0.1vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 3vw;
+  height: 7px;
+  color: white;
+  vertical-align:bottom;
+}
+
+.separador2{
+  margin-left: 2vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 3vw;
+  height: 30px;
+  color: white;
+
+}
+
+
+
+.h1side{
+  padding-top: 18px;
+  display: flex;
+  flex-direction:row-reverse;   
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 23vw;
+  height: 30px;
+}
+
+.h2sideshares{
   padding-top: 18px;
   display: flex;
   flex-direction:row-reverse;   
@@ -175,7 +265,17 @@ div{
 }
 
 
+
 .divtopflops{
+  display: flex;
+  flex-direction: column;   
+  padding-left: 0vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 310px;
+  height: 300px;
+}
+
+.divtopflops2{
   display: flex;
   flex-direction: column;   
   padding-left: 2vw;
