--- a/style1.css
+++ b/style1.css
@@ -240,8 +240,17 @@ div{
   min-width: 3vw;
   height: 30px;
   color: white;
-
 }
+
+.separador3{
+  margin-left: 0.5vw;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:0.8vw ;
+  width: 12vw;
+  height: 30px;
+  color: rgb(39, 67, 117);
+}
+
 
 
 
@@ -273,7 +282,7 @@ div{
   font-family: Arial, Helvetica, sans-serif;
   min-width: 310px;
   height: 300px;
-  
+
 }
 
 .divtopflops2{
