--- a/style1.css
+++ b/style1.css
@@ -294,3 +294,12 @@ div{
   height: 300px;
 }
 
+table {
+  align-self: center;
+  width: auto;
+  border-collapse: collapse;
+  border: 2px solid rgb(200,200,200);
+  letter-spacing: 1px;
+  font-size: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+}
