--- a/style1.css
+++ b/style1.css
@@ -313,6 +313,15 @@ td, tr {
 
 }
 
+tr td.tdmain {
+  
+  background-color: rgb(242, 242, 242);
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px 20px;
+
+}
+
 tr td.tdbis {
   background-color: rgb(232, 232, 232);
 }
@@ -321,4 +330,15 @@ tr td.tdsecondbis {
   background-color: rgba(17, 58, 243, 0.596);
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+
+.prueba {
+  background-color: white;
+  padding: 0 0 0 20%;
+  margin: 5%;
+}
+.countryList {
+  width: 70%;
+  padding-left: 11%;
 }
