--- a/style1.css
+++ b/style1.css
@@ -262,6 +262,14 @@ div{
   height: 30px;
 }
 
+.buscadorYresultados{
+  display: flex;
+  flex-direction:column;   
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 23vw;
+  height: 30px;
+}
+
 .h2sideshares{
   padding-top: 18px;
   display: flex;
@@ -333,7 +341,3 @@ tr td.tdsecondbis {
 
 
 
-.countryList {
-  width: 70%;
-  padding-left: 11%;
-}
