--- a/style1.css
+++ b/style1.css
@@ -289,7 +289,7 @@ div{
   flex-direction: column;   
   padding-left: 0vw;
   font-family: Arial, Helvetica, sans-serif;
-  min-width: 12vw;
+  width: 12vw;
   height: 30px;
   background-color: darkgray;
 }
