--- a/style1.css
+++ b/style1.css
@@ -286,6 +286,7 @@ div{
 
 .row{
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 9px;
   text-decoration: none;
   overflow: visible;
   display: flex;
