--- a/style1.css
+++ b/style1.css
@@ -286,13 +286,14 @@ div{
 
 .row{
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 9px;
+  font-size: 10px;
   text-decoration: none;
   overflow: visible;
   display: flex;
   flex-direction: column;   
   padding-left: 0vw;
   font-family: Arial, Helvetica, sans-serif;
+  min-width:234px
   width: 5vw;
   height: 10px;
   background-color: darkgray;
