--- a/style1.css
+++ b/style1.css
@@ -293,7 +293,7 @@ div{
   flex-direction: column;   
   padding-left: 0vw;
   font-family: Arial, Helvetica, sans-serif;
-  min-width:234px
+  min-width:234px;
   width: 5vw;
   height: 10px;
   background-color: darkgray;
