--- a/style1.css
+++ b/style1.css
@@ -295,8 +295,8 @@ div{
   font-family: Arial, Helvetica, sans-serif;
   min-width:234px;
   width: 5vw;
-  height: 10px;
-  background-color: darkgray;
+  height: 10.5px;
+  background-color: rgb(219, 206, 206);
 }
 
 .h2sideshares{
