--- a/style1.css
+++ b/style1.css
@@ -298,6 +298,9 @@ div{
   height: 10.5px;
   background-color: rgb(219, 206, 206);
 }
+a {
+  text-decoration: none;
+}
 
 .h2sideshares{
   padding-top: 18px;
