--- a/style1.css
+++ b/style1.css
@@ -296,8 +296,7 @@ div{
   min-width:234px;
   width: 5vw;
   height: 10.5px;
-  background-color: rgb(39, 67, 117);
-  color: whitesmoke;
+  background-color: rgb(243, 240, 240);
 
 }
 a {
@@ -374,5 +373,62 @@ tr td.tdsecondbis {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+@media screen and (max-width: 800px){
+
+  section{
+    margin-left: 2vw;
+    margin-right: 2vw;
+  }
+
+
+    table {
+      width: auto;
+      border-radius: 8px;
+      align-self: center;
+      border-collapse: collapse;
+      border: 1px solid rgb(39, 67, 117);
+      letter-spacing: 1px;
+      font-size: 1rem;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    h1{
+      margin: 0;
+      padding: 0;
+      padding-top: 10px;
+      margin-left: -5vw;
+      text-align: center;
+      color: rgb(39, 67, 117);;
+      font-size: 20px;
+      font-family: Arial, Helvetica, sans-serif;
+      transition: 0.5s font-size linear;
+      }
+    
+      header{
+        text-align: center;
+        padding-top: 1vw;
+        padding-bottom: 2vw;
+        background-color: rgb(39, 67, 117);
+      
+      }
+      .cabecera {
+        display:none;
+      }
+
+      section{
+        display: block;
+
+      }
+
+      .sectionContenedora{
+        padding-top: 1vw;
+        display: block;
+      }
+      .sectionContenedora2{
+        padding-top: 1vw;
+        display: block;
+      }
+
+}
 
 
