--- a/style1.css
+++ b/style1.css
@@ -237,6 +237,111 @@ section{
     position:relative;
     top:1px;
   }
+
+
+  /* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0, 0, 0, 0.849); /* Black w/ opacity */
+}
+
+.modal__header{
+  background-color: rgb(39, 67, 117);
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+  margin-bottom: 0px;
+  height: 30px;
+}
+
+
+/* Modal Content/Box */
+.modal-content {
+  margin-top: 0px;
+  background-color: #fefefe;
+  margin: 0% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* inside form */      
+   .inputForm { 
+        width: 100%; 
+        padding: 12px 20px; 
+        margin: 8px 0; 
+        display: inline-block; 
+        border: 2px solid #ccc; 
+        box-sizing: border-box; 
+    } 
+    /* set a style for all buttons*/ 
+      
+    .signupbtn { 
+        background-color: Green; 
+        color: white; 
+        padding: 15px 20px; 
+        margin: 8px 0; 
+        cursor: pointer; 
+        width: 100%; 
+        float: left; 
+        width: 50%; 
+    } 
+    /*set styles for the cancel button*/ 
+      
+    .cancelbtn { 
+      background-color: red; 
+      color: white; 
+      padding: 15px 20px; 
+      margin: 8px 0; 
+      cursor: pointer; 
+      width: 100%; 
+      float: left; 
+      width: 50%; 
+      padding: 15px 20px; 
+      float: left; 
+      width: 50%; 
+    } 
+    /*float cancel and signup buttons and add an equal width*/ 
+
+    /*add padding to container elements*/ 
+      
+    .container { 
+        padding: 16px; 
+    } 
+    /*clear floats*/ 
+      
+    .clearfix { 
+      flex-direction: row;
+        content: ""; 
+        clear: both; 
+        display: table; 
+    } 
+      
+
+
   
 
 .recuadroBis{
