--- a/style1.css
+++ b/style1.css
@@ -257,7 +257,7 @@ section{
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 40%; /* Could be more or less, depending on screen size */
   margin-bottom: 0px;
   height: 30px;
 }
@@ -270,7 +270,8 @@ section{
   margin: 0% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 40%; /* Could be more or less, depending on screen size */
+  height: 150px;
 }
 
 /* The Close Button */
@@ -290,7 +291,7 @@ section{
 
 /* inside form */      
    .inputForm { 
-        width: 100%; 
+        width: 80%; 
         padding: 12px 20px; 
         margin: 8px 0; 
         display: inline-block; 
@@ -305,7 +306,6 @@ section{
         padding: 15px 20px; 
         margin: 8px 0; 
         cursor: pointer; 
-        width: 100%; 
         float: left; 
         width: 50%; 
     } 
@@ -317,9 +317,6 @@ section{
       padding: 15px 20px; 
       margin: 8px 0; 
       cursor: pointer; 
-      width: 100%; 
-      float: left; 
-      width: 50%; 
       padding: 15px 20px; 
       float: left; 
       width: 50%; 
@@ -332,8 +329,25 @@ section{
         padding: 16px; 
     } 
     /*clear floats*/ 
+
+    .par2{
+      min-width:14vw;
+      width: 100%;
+      padding-left: 0vw;
+      flex-direction: column;
+      height: 80px;
+    }
+
+    .group3{
+      min-width:100px;
+      width: 30%;
+      padding-left: 0vw;
+      flex-direction: row;
+      height: 80px;
+    }
       
     .clearfix { 
+      padding-left: 0vw;
       flex-direction: row;
         content: ""; 
         clear: both; 
@@ -514,12 +528,13 @@ div{
   overflow: visible;
   display: flex;
   flex-direction: column;   
+  padding-top: 10px;
   padding-left: 0vw;
   font-family: Arial, Helvetica, sans-serif;
   min-width:234px;
   width: 5vw;
   height: 12px;
-  background-color: rgb(243, 240, 240);
+  background-color: rgba(245, 245, 245, 0.849)
 
 }
 a {
