--- a/style1.css
+++ b/style1.css
@@ -14,6 +14,18 @@ header{
 
 }
 
+.footer{
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  margin-top: 30px;
+  margin-left: 0px;
+  padding-left: 0vw;
+  padding-bottom: 0.01vw;
+  background-color: rgb(39, 67, 117);
+  height: 100px;
+}
+
 .cabecera {
   margin: 0;
   padding-top: 15px;
@@ -340,7 +352,6 @@ section{
 
     .group3{
       min-width:100px;
-      width: 30%;
       padding-left: 0vw;
       flex-direction: row;
       height: 80px;
@@ -582,6 +593,25 @@ table {
   font-family: Arial, Helvetica, sans-serif;
   transition-duration: 3s;
 }
+
+.fundamentalsshare{
+  align-self: center;
+  width: 29.8%;
+  margin-right:2%;
+}
+
+.finalshare{
+  align-self: auto;
+  width: 34%;
+  margin-right:2%;
+}
+.finaltables{
+  padding-top: 0px;
+  display: flex;
+  align-items: stretch;
+}
+
+
 td, tr {
   margin-left: 2px;
   font-size: 14px;
