--- a/style1.css
+++ b/style1.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   background-color: white;
@@ -458,12 +457,14 @@ div{
   display: flex;
   flex-direction: column;   
   margin-left: -2vw;
+  margin-right: 2vw;
   padding-left: 0vw;
-  padding-right: 2vw;
+  padding-right: 0vw;
   font-family: Arial, Helvetica, sans-serif;
-  width: 38%;
-  height: 300px;
+  width: 32vw;
+  height: 250px;
 }
+
 
 
 .recuadrocabecera{
