--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 0;
   background-color: white;
@@ -8,36 +7,46 @@ header{
   flex-direction: row;
   text-align: center;
   padding-top: 1vw;
-  padding-left: 15vw;
+  padding-left: 15%;
   padding-bottom: 0.01vw;
-  background-color: #00FFBF;
+  background-color: green;
 
+}
+
+.footer{
+  display: flex;
+  flex-direction: row;
+  text-align: center;
+  margin-top: 30px;
+  margin-left: 0px;
+  padding-left: 0vw;
+  padding-bottom: 0.01vw;
+  background-color: rgb(39, 67, 117);
+  height: 100px;
 }
 
 .cabecera {
   margin: 0;
-  padding-top: 15px;
+  margin-top: 10px;
+  padding-top: 1vw;
   margin-left: 10vw;
   text-align: center;
   color: whitesmoke;
-  font-size: 30px;
+  font-size: 1.6vw;
   font-family: Arial, Helvetica, sans-serif;
     transition: 0.5s font-size linear;
-    background-color: #00FFBF;
+    background-color: rgb(39, 67, 117);
 
 }
 
-.cabecera:hover {
-  font-size: 31px;
-  font-family: Arial, Helvetica, sans-serif;
-  transition: 0.5s font-size linear;
-}
 
 nav {
+  padding-left: 7vw;
   padding-top: 50px;
   justify-content: space-between;
-  background-color: #00FFBF;
+  background-color: rgb(39, 67, 117);
 }
+
 
 nav > ul {
 
@@ -47,7 +56,8 @@ nav > ul {
 }
 
 .botonesContenedor {
-  items-align: right;
+
+  padding-left: 13.5%;
   padding-top: 10px;
   display: flex;
   flex-direction: column;   
@@ -59,6 +69,88 @@ nav > ul {
   flex-direction: column;   
   list-style-type: none;
 }
+
+.botonAzul {
+	box-shadow:inset 0px 1px 0px 0px #54a3f7;
+	background:linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
+	background-color:#007dc1;
+	border-radius:3px;
+	border:1px solid #124d77;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
+	padding:6px;
+	text-decoration:none;
+  text-shadow:0px 1px 0px #154682;
+  width: 5vw;
+  min-width: 60px;
+}
+.botonAzul:hover {
+	background:linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
+	background-color:#0061a7;
+}
+.botonAzul:active {
+	position:relative;
+	top:1px;
+}
+
+.botonVerde {
+	box-shadow:inset 0px 1px 0px 0px #a4e271;
+	background:linear-gradient(to bottom, #89c403 5%, #77a809 100%);
+	background-color:#89c403;
+	border-radius:3px;
+	border:1px solid #74b807;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:13px;
+	padding:6px;
+	text-decoration:none;
+  text-shadow:0px 1px 0px #528009;
+  width: 5vw;
+  min-width: 60px;
+}
+.botonVerde:hover {
+	background:linear-gradient(to bottom, #77a809 5%, #89c403 100%);
+	background-color:#77a809;
+}
+.botonVerde:active {
+	position:relative;
+	top:1px;
+}
+
+.botonNaranja {
+	box-shadow:inset 0px 1px 0px 0px #fff6af;
+	background:linear-gradient(to bottom, #ffec64 5%, #ffab23 100%);
+	background-color:#ffec64;
+	border-radius:3px;
+	border:1px solid #ffaa22;
+	display:inline-block;
+	cursor:pointer;
+	color:#333333;
+	font-family:Arial;
+	font-size:13px;
+	padding:6px;
+	text-decoration:none;
+  text-shadow:0px 1px 0px #ffee66;
+  width: 5vw;
+  min-width: 60px;
+
+}
+.botonNaranja:hover {
+	background:linear-gradient(to bottom, #ffab23 5%, #ffec64 100%);
+	background-color:#ffab23;
+}
+.botonNaranja:active {
+	position:relative;
+	top:1px;
+}
+
+        
+
 
 nav > ul > li {
   text-align: bottom;
@@ -76,8 +168,9 @@ nav > ul > li > a {
 }
 
 nav > ul > li > a:hover {
+  font-size: 13px;
   color: lightcoral;
-  transition: color 0.1s linear;
+  transition: color 0.5s linear;
 }
 
 section{
@@ -109,11 +202,198 @@ section{
 
 }
 
+.recuadro{
+  padding-left: 10vw;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: row;   
+  margin-left: 20vw;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+  width: 45vw;
+  height: 110px;
+  background-color: rgba(17, 58, 243, 0.596);
+}
+
+.recuadroDentro{
+  margin-left: -10vw;
+  margin-top: -15px;
+  display: flex;
+  flex-direction: column;   
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+}
+
+.recuadroDentro2{
+  margin-left: 0vw;
+  display: flex;
+  flex-direction: column;   
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+}
+
+
+  .botonInvest {
+    background-color:#7892c2;
+    border-radius:28px;
+    border:4px solid rgb(39, 67, 117);
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:1vw;
+    margin-right: 14vw;
+    padding:15px 76px;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #283966;
+  }
+  .botonInvest:hover {
+    background-color:#476e9e;
+  }
+  .botonInvest:active {
+    position:relative;
+    top:1px;
+  }
+
+
+  /* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0, 0, 0, 0.849); /* Black w/ opacity */
+}
+
+.modal__header{
+  background-color: rgb(39, 67, 117);
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%; /* Could be more or less, depending on screen size */
+  margin-bottom: 0px;
+  height: 30px;
+}
+
+
+/* Modal Content/Box */
+.modal-content {
+  margin-top: 0px;
+  background-color: #fefefe;
+  margin: 0% auto; /* 15% from the top and centered */
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%; /* Could be more or less, depending on screen size */
+  height: 150px;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+/* inside form */      
+   .inputForm { 
+        width: 80%; 
+        padding: 12px 20px; 
+        margin: 8px 0; 
+        display: inline-block; 
+        border: 2px solid #ccc; 
+        box-sizing: border-box; 
+    } 
+    /* set a style for all buttons*/ 
+      
+    .signupbtn { 
+        background-color: Green; 
+        color: white; 
+        padding: 15px 20px; 
+        margin: 8px 0; 
+        cursor: pointer; 
+        float: left; 
+        width: 50%; 
+    } 
+    /*set styles for the cancel button*/ 
+      
+    .cancelbtn { 
+      background-color: red; 
+      color: white; 
+      padding: 15px 20px; 
+      margin: 8px 0; 
+      cursor: pointer; 
+      padding: 15px 20px; 
+      float: left; 
+      width: 50%; 
+    } 
+    /*float cancel and signup buttons and add an equal width*/ 
+
+    /*add padding to container elements*/ 
+      
+    .container { 
+        padding: 16px; 
+    } 
+    /*clear floats*/ 
+
+    .par2{
+      min-width:14vw;
+      width: 100%;
+      padding-left: 0vw;
+      flex-direction: column;
+      height: 80px;
+    }
+
+    .group3{
+      min-width:100px;
+      padding-left: 0vw;
+      flex-direction: row;
+      height: 80px;
+    }
+      
+    .clearfix { 
+      padding-left: 0vw;
+      flex-direction: row;
+        content: ""; 
+        clear: both; 
+        display: table; 
+    } 
+      
+
+
+  
+
+.recuadroBis{
+  padding-left: 10vw;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;   
+  margin-left: 20vw;
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: left;
+  width: 45vw;
+  height: 110px;
+  border-style: solid;
+  background-color: rgb(243, 237, 237);
+}
+
 h1 {
   margin: 0;
   padding-top: 15px;
-  text-align: center;
-  color: #00FFBF;
+  width: 30vw;  
+  text-align: left;
+  color: rgb(39, 67, 117);
   font-size: 30px;
   font-family: Arial, Helvetica, sans-serif;
   transition: 0.5s font-size linear;
@@ -124,7 +404,7 @@ h2 {
   margin: 0;
   padding-top: 15px;
   text-align: center;
-  color: #00FFBF;
+  color: rgb(39, 67, 117);
   font-size: 22px;
   font-family: Arial, Helvetica, sans-serif;
   transition: 0.5s font-size linear;
@@ -135,7 +415,7 @@ h3 {
   padding-top: 5px;
   padding-left: 2vw;
   text-align: center;
-  color: #00FFBF;
+  color: rgb(39, 67, 117);
   font-size: 18px;
   font-family: Arial, Helvetica, sans-serif;
   transition: 0.5s font-size linear;
@@ -147,7 +427,7 @@ h3 {
   padding-top: 5px;
   padding-left: 0vw;
   text-align: center;
-  color: #00FFBF;
+  color: rgb(39, 67, 117);
   font-size: 18px;
   font-family: Arial, Helvetica, sans-serif;
   transition: 0.5s font-size linear;
@@ -160,11 +440,125 @@ div{
   flex-direction: column;   
   padding-left: 2vw;
   font-family: Arial, Helvetica, sans-serif;
-  min-width: 610px;
+  min-width: 25%;
   height: 300px;
 }
 
-.h2side{
+.companyList{
+  display: flex;
+  flex-direction: column;   
+  padding-left: 0vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 0px;
+  height: auto;
+}
+
+.divShares{
+  display: flex;
+  flex-direction: column;   
+  margin-left: -2vw;
+  margin-right: 2vw;
+  padding-left: 0vw;
+  padding-right: 0vw;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 32vw;
+  height: 250px;
+}
+
+
+.recuadrocabecera{
+  display: flex;
+  flex-direction: row;   
+  padding-left: 0vw;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: -8vw;
+  min-width: 60px;
+  height: 30px;  
+}
+.recuadrocabecera2{
+  display: flex;
+  flex-direction: row;   
+  padding-left: 0vw;
+  padding-top: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: -8vw;
+  min-width: 60px;
+  height: 30px;
+  
+}
+
+.separador{
+  margin-left: 0.1vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 3vw;
+  height: 7px;
+  color: white;
+  vertical-align:bottom;
+}
+
+.separador2{
+  margin-left: 2vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 3vw;
+  height: 30px;
+  color: white;
+}
+
+.separador3{
+  margin-left: 0.5vw;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size:0.8vw ;
+  width: 12vw;
+  height: 30px;
+  color: rgb(39, 67, 117);
+}
+
+
+
+
+.h1side{
+  padding-top: 18px;
+  display: flex;
+  flex-direction:row-reverse;   
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 23vw;
+  height: 30px;
+}
+
+.buscadorYresultados{
+  display: flex;
+  flex-direction:column;   
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 12vw;
+  height: 30px;
+}
+
+.buscador{
+  height: 30px;
+  width: 12vw;
+}
+
+.row{
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 11px;
+  text-decoration: none;
+  overflow: visible;
+  display: flex;
+  flex-direction: column;   
+  padding-top: 10px;
+  padding-left: 0vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width:234px;
+  width: 5vw;
+  height: 12px;
+  background-color: rgba(245, 245, 245, 0.849)
+
+}
+a {
+  text-decoration: none;
+}
+
+.h2sideshares{
   padding-top: 18px;
   display: flex;
   flex-direction:row-reverse;   
@@ -175,12 +569,164 @@ div{
 }
 
 
+
 .divtopflops{
+  display: flex;
+  flex-direction: column;   
+  padding-left: 0vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 26.5vw;
+  height: 300px;
+
+}
+
+.divtopflops2{
   display: flex;
   flex-direction: column;   
   padding-left: 2vw;
   font-family: Arial, Helvetica, sans-serif;
-  min-width: 310px;
+  min-width: 26.5vw;
   height: 300px;
 }
+
+table {
+  align-self: center;
+  width: auto;
+  border-collapse: collapse;
+  border: 2px solid rgb(200,200,200);
+  letter-spacing: 1px;
+  font-size: 1rem;
+  font-family: Arial, Helvetica, sans-serif;
+  transition-duration: 3s;
+}
+
+.fundamentalsshare{
+  align-self: center;
+  width: 29.8%;
+  margin-right:2%;
+}
+
+.subidas{
+  align-self: auto;
+  width: 100%;
+}
+.bajadas{
+  align-self: auto;
+  width: 100%;
+}
+
+.finalshare{
+  align-self: auto;
+  width: 34%;
+  margin-right:2%;
+}
+.finaltables{
+  padding-top: 0px;
+  display: flex;
+  align-items: stretch;
+}
+
+
+td, tr {
+  margin-left: 2px;
+  font-size: 14px;
+  border: 1px solid rgb(190,190,190);
+  vertical-align: 0px;
+    text-align: left;
+    background-color: rgb(235,235,235);
+
+}
+
+tr td.tdmain {
+  
+  background-color: rgb(242, 242, 242);
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+  padding: 10px 20px;
+
+}
+
+tr td.tdbis {
+  background-color: rgb(232, 232, 232);
+}
+
+tr td.tdsecondbis {
+  background-color: rgba(17, 58, 243, 0.596);
+  font-weight: bold;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+
+@media screen and (max-width: 1200px)and (min-width: 800px){
+  .cabecera {
+    display:none;
+  }
+
+  section{
+    display: block;
+
+  }
+}
+
+
+@media screen and (max-width: 800px){
+
+  section{
+    margin-left: 2vw;
+    margin-right: 2vw;
+  }
+
+
+    table {
+      width: auto;
+      border-radius: 8px;
+      align-self: center;
+      border-collapse: collapse;
+      border: 1px solid rgb(39, 67, 117);
+      letter-spacing: 1px;
+      font-size: 1rem;
+      font-family: Arial, Helvetica, sans-serif;
+    }
+
+    h1{
+      margin: 0;
+      padding: 0;
+      padding-top: 10px;
+      margin-left: -5vw;
+      text-align: center;
+      color: rgb(39, 67, 117);;
+      font-size: 20px;
+      font-family: Arial, Helvetica, sans-serif;
+      transition: 0.5s font-size linear;
+      }
+    
+      header{
+        text-align: center;
+        padding-top: 1vw;
+        padding-bottom: 2vw;
+        background-color: rgb(39, 67, 117);
+      
+      }
+      .cabecera {
+        display:none;
+      }
+
+      section{
+        display: block;
+
+      }
+
+      .sectionContenedora{
+        padding-top: 1vw;
+        display: block;
+      }
+      .sectionContenedora2{
+        flex-direction: row;
+        align-items: flex-start;
+        padding-top: 1vw;
+        display: block;
+      }
+
+}
+
 
