--- a/style1.css
+++ b/style1.css
@@ -225,6 +225,7 @@ section{
 }
 
 .recuadroDentro2{
+  padding-left: 14vw;
   margin-left: 0vw;
   display: flex;
   flex-direction: column;   
@@ -235,15 +236,14 @@ section{
 
   .botonInvest {
     background-color:#7892c2;
-    border-radius:28px;
+    border-radius:25px;
     border:4px solid rgb(39, 67, 117);
     display:inline-block;
     cursor:pointer;
     color:#ffffff;
     font-family:Arial;
     font-size:1vw;
-    margin-right: 14vw;
-    padding:15px 76px;
+    padding:15px 3vw;
     text-decoration:none;
     text-shadow:0px 1px 0px #283966;
   }
@@ -295,7 +295,7 @@ section{
 .close {
   color: #aaa;
   float: right;
-  font-size: 28px;
+  font-size: 1.2vw;
   font-weight: bold;
 }
 
@@ -473,7 +473,8 @@ div{
   padding-left: 0vw;
   font-family: Arial, Helvetica, sans-serif;
   margin-left: -8vw;
-  min-width: 60px;
+  margin-right: -4vw;
+  width: 500px;
   height: 30px;  
 }
 .recuadrocabecera2{
@@ -666,19 +667,34 @@ tr td.tdsecondbis {
 }
 
 
-@media screen and (max-width: 1200px)and (min-width: 800px){
-  .cabecera {
-    display:none;
+@media screen and (max-width: 1600px)and (min-width: 1200px){
+
+  .recuadroDentro2{
+    padding-left: 5vw;
   }
+
+}
+
+
+@media screen and (max-width: 1200px)and (min-width: 800px){
+
 
   section{
     display: block;
 
   }
+  .recuadroDentro2{
+    padding-left: 2vw;
+  }
+
 }
 
 
 @media screen and (max-width: 800px){
+
+  .recuadroDentro2{
+    padding-left: 1vw;
+  }
 
   section{
     margin-left: 2vw;
