--- a/style1.css
+++ b/style1.css
@@ -218,6 +218,7 @@ section{
 .recuadroDentro{
   margin-left: -10vw;
   margin-top: -15px;
+  width: 30vw;
   display: flex;
   flex-direction: column;   
   font-family: Arial, Helvetica, sans-serif;
@@ -225,8 +226,9 @@ section{
 }
 
 .recuadroDentro2{
-  padding-left: 14vw;
+  width: 15vw;
   margin-left: 0vw;
+  margin-right: 1vw;
   display: flex;
   flex-direction: column;   
   font-family: Arial, Helvetica, sans-serif;
@@ -489,6 +491,17 @@ div{
   
 }
 
+.recuadrocabecera3{
+  display: flex;
+  flex-direction: row;   
+  padding-left: 0vw;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-left: -8vw;
+  margin-right: -4vw;
+  min-width: 50px;
+  height: 30px;  
+}
+
 .separador{
   margin-left: 0.1vw;
   font-family: Arial, Helvetica, sans-serif;
@@ -667,16 +680,74 @@ tr td.tdsecondbis {
 }
 
 
-@media screen and (max-width: 1600px)and (min-width: 1200px){
+
+
+@media screen and (max-width: 1824px)and (min-width: 1024px){
 
   .recuadroDentro2{
     padding-left: 5vw;
   }
+  .recuadroDentro{
+font-size: 15px;  
+
+}
+
+.separador{
+  margin-left: 0.1vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 3vw;
+  height: 7px;
+  color: white;
+  vertical-align:bottom;
+}
+
+.separador2{
+  margin-left: 1vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 3vw;
+  height: 30px;
+  color: white;
+}
+
+h1 {
+  margin: 0;
+  padding-top: 15px;
+  width: 30vw;  
+  text-align: left;
+  color: rgb(39, 67, 117);
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 0.5s font-size linear;
+    background-color: white;
+}
+
+h2 {
+  margin: 0;
+  padding-top: 15px;
+  text-align: center;
+  color: rgb(39, 67, 117);
+  font-size: 22px;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 0.5s font-size linear;
+    background-color: white;
+}
+h3 {
+  margin: 0;
+  padding-top: 5px;
+  padding-left: 2vw;
+  text-align: center;
+  color: rgb(39, 67, 117);
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
+  transition: 0.5s font-size linear;
+    background-color: white;
+}
+
 
 }
 
 
-@media screen and (max-width: 1200px)and (min-width: 800px){
+@media only screen and (min-width : 768px) and (max-width : 1024px) {
 
 
   section{
@@ -684,13 +755,13 @@ tr td.tdsecondbis {
 
   }
   .recuadroDentro2{
-    padding-left: 2vw;
+    padding-left: 0vw;
   }
 
 }
 
 
-@media screen and (max-width: 800px){
+@media only screen (max-width: 768px){
 
   .recuadroDentro2{
     padding-left: 1vw;
