--- a/style1.css
+++ b/style1.css
@@ -467,6 +467,18 @@ div{
   height: 250px;
 }
 
+.divShares2{
+  display: flex;
+  flex-direction: column;   
+  margin-left: -2vw;
+  margin-right: 2vw;
+  padding-left: 0vw;
+  padding-right: 0vw;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 32vw;
+  height: 250px;
+}
+
 
 
 .recuadrocabecera{
