--- a/style1.css
+++ b/style1.css
@@ -783,10 +783,115 @@ h3 {
 }
 
 
+.divtopflops{
+  display: flex;
+  flex-direction: column;   
+  padding-left: 0vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 29.5vw;
+  height: 300px;
+
+}
+
+.divtopflops2{
+  display: flex;
+  flex-direction: column;   
+  padding-left: 2vw;
+  font-family: Arial, Helvetica, sans-serif;
+  min-width: 29.5vw;
+  height: 300px;
+}
+
+
 }
 
 
 @media only screen and (min-width : 768px) and (max-width : 1024px) {
+
+  .fundamentalsshare{
+    align-self: center;
+    width: 35.5%;
+    margin-right:2%;
+  }
+  
+  .separador3{
+    margin-left: 0.2vw;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size:1.1vw ;
+    width: 17vw;
+    height: 30px;
+    color: rgb(39, 67, 117);
+  }
+
+
+  .recuadroBis{
+    padding-left: 10vw;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;   
+    margin-left: 16vw;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    width: 60vw;
+    height: 110px;
+    border-style: solid;
+    background-color: rgb(243, 237, 237);
+  }
+
+  .botonInvest {
+    background-color:#7892c2;
+    border-radius:25px;
+    border:4px solid rgb(39, 67, 117);
+    display:inline-block;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    font-size:1vw;
+    padding:15px 3vw;
+    text-decoration:none;
+    text-shadow:0px 1px 0px #283966;
+  }
+
+  .buscadorYresultados{
+    display: flex;
+    flex-direction:column;   
+    font-family: Arial, Helvetica, sans-serif;
+    min-width: 16vw;
+    height: 30px;
+  }
+  
+  .buscador{
+    height: 30px;
+    width: 16vw;
+  }
+
+  .tableindices{
+    width: 33.5vw;
+  }
+
+  .divShares2{
+    display: flex;
+    flex-direction: column;   
+    margin-left: 0.5vw;
+    margin-right: 0vw;
+    padding-left: 0vw;
+    padding-right: 0vw;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 35.5vw;
+    height: 250px;
+  }
+
+  .divShares{
+    display: flex;
+    flex-direction: column;   
+    margin-left: -2vw;
+    margin-right: 2vw;
+    padding-left: 0vw;
+    padding-right: 0vw;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 33.5vw;
+    height: 250px;
+  }
 
   .h2sideshares{
     padding-top: 18px;
@@ -820,7 +925,7 @@ h3 {
   }
 
   h1{
-    min-width: 40vw;
+    min-width: 46vw;
     margin: 0;
     padding: 0;
     padding-top: 18px;
@@ -874,7 +979,7 @@ h3 {
     margin-left: 16vw;
     font-family: Arial, Helvetica, sans-serif;
     text-align: left;
-    width: 50vw;
+    width: 60.5vw;
     height: 110px;
     background-color: rgba(17, 58, 243, 0.596);
   }
@@ -882,7 +987,7 @@ h3 {
   .recuadroDentro{
     margin-left: -6vw;
     margin-top: -15px;
-    width: 30vw;
+    width: 40vw;
     display: flex;
     flex-direction: column;   
     font-family: Arial, Helvetica, sans-serif;
