--- a/style1.css
+++ b/style1.css
@@ -806,7 +806,7 @@ h3 {
 }
 
 */
-@media only screen and (min-width : 768px) and (max-width : 1824px) {
+@media only screen and (min-width : 667px) and (max-width : 1824px) {
 
   .subidas{
     align-self: auto;
@@ -1070,15 +1070,74 @@ h3 {
 }
 
 
-@media only screen (max-width: 768px){
+@media only screen and (max-width: 667px){
+
+
+  .recuadrocabecera{
+    display: flex;
+    flex-direction: row;   
+    padding-left: 0vw;
+    font-family: Arial, Helvetica, sans-serif;
+    margin-left: -8vw;
+    margin-right: 0vw;
+    width: 80vw;
+    height: 30px;  
+  }
+
+  .finaltables{
+    display: flex;
+    flex-direction: column;   
+    padding-right: 0px;
+
+  }
 
   .recuadroDentro2{
     padding-left: 1vw;
+    padding-right: 0px;
+
+  }
+
+  .buscador{
+    height: 30px;
+    width: 88vw;
+  }
+
+  .buscadorYresultados{
+    display: flex;
+    flex-direction:column;   
+    font-family: Arial, Helvetica, sans-serif;
+    min-width: 88vw;
+    height: 30px;
+  }
+
+  .h1side{
+    padding-right: 2vw;
+    padding-top: 18px;
+    display: flex;
+    flex-direction:row-reverse;   
+    font-family: Arial, Helvetica, sans-serif;
+    min-width: 90vw;
+    height: 30px;
+  }
+
+  .h2sideshares{
+    padding-top: 18px;
+    display: flex;
+    flex-direction:row-reverse;   
+    padding-right: 2vw;
+    font-family: Arial, Helvetica, sans-serif;
+    min-width: 90vw;  
+    height: 30px;
   }
 
   section{
-    margin-left: 2vw;
-    margin-right: 2vw;
+    display: flex;
+    flex-direction: column;   
+    padding-left: 0.2vw;
+    padding-right: 0px;
+    margin-left: 0vw;
+    display: block;
+    margin-right: 0vw;
   }
 
 
@@ -1092,17 +1151,53 @@ h3 {
       font-size: 1rem;
       font-family: Arial, Helvetica, sans-serif;
     }
-
     h1{
+      min-width: 88vw;
       margin: 0;
       padding: 0;
-      padding-top: 10px;
-      margin-left: -5vw;
-      text-align: center;
+      padding-top: 17px;
+      padding-left: 1vw;
+      text-align: left;
       color: rgb(39, 67, 117);;
-      font-size: 20px;
+      font-size: 17px;
       font-family: Arial, Helvetica, sans-serif;
       transition: 0.5s font-size linear;
+      }
+  
+      h2 {
+        margin: 0;
+        padding-left: 1vw;
+        padding-top: 15px;
+        text-align: left;
+        color: rgb(39, 67, 117);
+        font-size: 15px;
+        font-family: Arial, Helvetica, sans-serif;
+        transition: 0.5s font-size linear;
+          background-color: white;
+      }
+      h3 {
+        text-align: left;
+        margin: 0;
+        padding-top: 5px;
+        padding-left: 1vw;
+        text-align: center;
+        color: rgb(39, 67, 117);
+        font-size: 13px;
+        font-family: Arial, Helvetica, sans-serif;
+        transition: 0.5s font-size linear;
+          background-color: white;
+      }
+
+      .h3first {
+        margin: 0;
+        padding-top: 5px;
+        padding-left: 0vw;
+        text-align: center;
+        color: rgb(39, 67, 117);
+        font-size: 13px;
+        font-family: Arial, Helvetica, sans-serif;
+        transition: 0.5s font-size linear;
+          background-color: white;
       }
     
       header{
@@ -1116,10 +1211,7 @@ h3 {
         display:none;
       }
 
-      section{
-        display: block;
-
-      }
+  
 
       .sectionContenedora{
         padding-top: 1vw;
