--- a/style2.css
+++ b/style2.css
@@ -727,6 +727,20 @@ tr td.tdsecondbis {
         display: block;
       }
 
+      .recuadroBis {
+          padding-left: 3vw;
+          margin-top: 30px;
+          display: flex;
+          flex-direction: column;
+          margin-left: 3vw;
+          font-family: Arial, Helvetica, sans-serif;
+          text-align: left;
+          width: 90vw;
+          height: 130px;
+          border-style: solid;
+          background-color: rgb(243, 237, 237);
+      }
+
 }
 
 
