--- a/style1.css
+++ b/style1.css
@@ -1300,7 +1300,7 @@ h3 {
         padding-left: 0vw;
         padding-right: 0vw;
         font-family: Arial, Helvetica, sans-serif;
-        width: 95vw;
+        width: 85vw;
         height: 250px;
       }
       
@@ -1312,7 +1312,7 @@ h3 {
         padding-left: 0vw;
         padding-right: 0vw;
         font-family: Arial, Helvetica, sans-serif;
-        width: 95vw;
+        width: 85vw;
         height: 250px;
       }
 
@@ -1476,6 +1476,7 @@ h3 {
 }
 
 .fundamentalsshare{
+  margin-top: 20px;
   padding-left: 3vw;
   margin-left: 3vw;
   align-self: center;
