--- a/style1.css
+++ b/style1.css
@@ -1166,6 +1166,23 @@ h3 {
     height: 30px;
   }
 
+  .row{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 9px;
+    text-decoration: none;
+    overflow: visible;
+    display: flex;
+    flex-direction: column;   
+    padding-top: 8px;
+    padding-left: 8vw;
+    font-family: Arial, Helvetica, sans-serif;
+    min-width:234px;
+    width: auto;
+    height: 12px;
+    background-color: rgba(245, 245, 245, 0.849)
+  
+  }
+
   .h1side{
     margin-left: 2vw;
     padding-right: 2vw;
