--- a/style1.css
+++ b/style1.css
@@ -1178,7 +1178,7 @@ h3 {
     font-family: Arial, Helvetica, sans-serif;
     min-width:234px;
     width: auto;
-    height: 12px;
+    height: 10px;
     background-color: rgba(245, 245, 245, 0.849)
   
   }
@@ -1501,6 +1501,9 @@ h3 {
   margin-right:2%;
 }
 
+.movil1{
+  margin-top:30px;
+}
 
 }
 
